--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 dj-database-url==0.4.1
 Django==1.11.1
+django-appconf==1.0.2
+django-compressor==2.1.1
+django-sass-processor==0.5.4
 gunicorn==19.6.0
+libsass==0.13.2
 psycopg2==2.6.2
+pytz==2017.2
+rcssmin==1.0.6
+rjsmin==1.0.12
+six==1.10.0
 whitenoise==3.2
