--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ dj-database-url==0.4.1
 Django==1.11.1
 django-appconf==1.0.2
 django-compressor==2.1.1
-django-sass-processor==0.5.4
+django-widget-tweaks==1.4.1
 gunicorn==19.6.0
 libsass==0.13.2
 psycopg2==2.6.2
